<?xml version="1.0"?>
<package format="2">
  <name>hw1_kitti_projection</name>
  <version>0.0.1</version>
  <description>Publish KITTI lidar and camera data</description>

  <maintainer email="seodayeon416@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- system dependencies -->
  <exec_depend>opencv</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
